feat: support npm metadata validators
